<resources>
    <string name="app_name">Android Dice Roller</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="favorite">favorite</string>
    <string name="roll">roll</string>
    <string name="clear">clear</string>

    <string name="d100">d100</string>
    <string name="d20">d20</string>
    <string name="d12">d12</string>
    <string name="d10">d10</string>
    <string name="d8">d8</string>
    <string name="d6">d6</string>
    <string name="d4">d4</string>
    <string name="d3">d3</string>
    <string name="dN">dN</string>
  <string name="d2">d2</string>
    <string name="dF">dF</string>
    <string name="reroll">reroll</string>
    <string name="penetrate">penetrate</string>
    <string name="greaterThan"><![CDATA[>]]></string>
    <string name="lessThan"><![CDATA[<]]></string>

  <string name="keep">keep</string>

  <string name="keepHigh">KH</string>
  <string name="keepHighDescription">Keep highest</string>

  <string name="dropHigh">DH</string>
  <string name="dropHighDescription">Drop highest</string>

  <string name="keepLow">KL</string>
  <string name="keepLowDescription">Keep lowest</string>

  <string name="dropLow">DL</string>
  <string name="dropLowDescription">Drop Lowest</string>

  <string name="rerollOnce">rerollOnce</string>
  <string name="explode">explode</string>
  <string name="countFailures">f</string>
  <string name="compound">compound</string>
  <string name="dice">Dice</string>
  <string name="category">Category</string>
  <string name="title">Title</string>
  <string name="save">Save</string>
  <string name="close">Close</string>
  <string name="repeat"><i>x</i> : <i>y</i></string>
  <string name="repeatDescription">Repeat roll</string>
</resources>
