<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:style="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TableRow>

    <Button
      android:id="@+id/number_pad_1"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/one"
      android:text="@string/one" />

    <Button
      android:id="@+id/number_pad_2"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/two"
      android:text="@string/two" />

    <Button
      android:id="@+id/number_pad_3"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/three"
      android:text="@string/three" />

    </TableRow>
    <TableRow>
      <Button
        android:id="@+id/number_pad_4"
        style="@style/DiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/four"
        android:text="@string/four" />

      <Button
        android:id="@+id/number_pad_5"
        style="@style/DiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/five"
        android:text="@string/five" />

      <Button
        android:id="@+id/number_pad_6"
        style="@style/DiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/six"
        android:text="@string/six" />
  </TableRow>

  <TableRow>

    <Button
      android:id="@+id/number_pad_7"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/seven"
      android:text="@string/seven" />

    <Button
      android:id="@+id/number_pad_8"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/eight"
      android:text="@string/eight" />

    <Button
      android:id="@+id/number_pad_9"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/nine"
      android:text="@string/nine" />
  </TableRow>
    <TableRow>

      <Button
        android:id="@+id/minus"
        style="@style/DiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/minus"
        android:text="@string/minus" />

      <Button
      android:id="@+id/number_pad_0"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/zero"
      android:text="@string/zero" />


    <Button
      android:id="@+id/plus"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/plus"
      android:text="@string/plus" />
  </TableRow>

  <TableRow>

    <Button
      android:id="@+id/keepHigh"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/keepHigh"
      android:text="@string/keepHigh" />

    <Button
      android:id="@+id/dropHigh"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/dropHigh"
      android:text="@string/dropHigh" />


    <Button
      android:visibility="gone"
      android:id="@+id/reroll"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/reroll"
      android:text="@string/reroll" />

    <Button
      android:visibility="gone"
      android:id="@+id/compound"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/compound"
      android:text="@string/compound" />

    <Button
      android:visibility="gone"
      android:id="@+id/greaterThan"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/greaterThan"
      android:text="@string/greaterThan" />

    <Button
      android:visibility="gone"
      android:id="@+id/lessThan"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/lessThan"
      android:text="@string/lessThan" />

  </TableRow>

  <TableRow>

    <Button
      android:id="@+id/keepLow"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/keepLow"
      android:text="@string/keepLow" />

    <Button
      android:id="@+id/dropLow"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/dropLow"
      android:text="@string/dropLow" />

    <Button
      android:visibility="gone"
      android:id="@+id/rerollOnce"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/rerollOnce"
      android:text="@string/rerollOnce" />

    <Button
      android:id="@+id/explode"
      android:visibility="gone"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/explode"
      android:text="@string/explode" />

    <Button
      android:visibility="gone"
      android:id="@+id/penetrate"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/penetrate"
      android:text="@string/penetrate" />

    <Button
      android:visibility="gone"
      android:id="@+id/countFailures"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/countFailures"
      android:text="@string/countFailures" />

  </TableRow>
</TableLayout>
