<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TableRow>

    <Button
      android:id="@+id/dN"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/dN"
      android:text="@string/dN" />

    <Button
      android:id="@+id/d100"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d100"
      android:text="@string/d100" />

    <Button
      android:id="@+id/d20"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d20"
      android:text="@string/d20" />

    <Button
      android:id="@+id/d12"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d12"
      android:text="@string/d12" />

    <Button
      android:id="@+id/d10"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d10"
      android:text="@string/d10" />
  </TableRow>

  <TableRow>

    <Button
      android:id="@+id/d8"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d8"
      android:text="@string/d8" />

    <Button
      android:id="@+id/d6"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d6"
      android:text="@string/d6" />

    <Button
      android:id="@+id/d4"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d4"
      android:text="@string/d4" />

    <Button
      android:id="@+id/d3"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d3"
      android:text="@string/d3" />

    <Button
      android:id="@+id/d2"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/d2"
      android:text="@string/d2" />


    <Button
      android:id="@+id/dF"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/dF"
      android:text="@string/dF" />
  </TableRow>
</TableLayout>
