<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:stretchColumns="*"
  android:paddingStart="@dimen/grid_12"
  android:paddingEnd="@dimen/grid_12"
  xmlns:style="http://schemas.android.com/apk/res-auto">

  <TableRow android:layout_weight="1">

    <Button
      android:id="@+id/number_pad_1"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/one"
      android:text="@string/one" />

    <Button
      android:id="@+id/number_pad_2"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/two"
      android:text="@string/two" />

    <Button
      android:id="@+id/number_pad_3"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/three"
      android:text="@string/three" />

  </TableRow>

  <TableRow android:layout_weight="1">

    <Button
      android:id="@+id/number_pad_4"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/four"
      android:text="@string/four" />

    <Button
      android:id="@+id/number_pad_5"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/five"
      android:text="@string/five" />

    <Button
      android:id="@+id/number_pad_6"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/six"
      android:text="@string/six" />

  </TableRow>

  <TableRow android:layout_weight="1">

    <Button
      android:id="@+id/number_pad_7"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/seven"
      android:text="@string/seven" />

    <Button
      android:id="@+id/number_pad_8"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/eight"
      android:text="@string/eight" />

    <Button
      android:id="@+id/number_pad_9"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/nine"
      android:text="@string/nine" />
  </TableRow>

  <TableRow android:layout_weight="1">

    <Button
      android:id="@+id/minus"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/minus"
      android:text="@string/minus" />

    <Button
      android:id="@+id/number_pad_0"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/zero"
      android:text="@string/zero" />

    <Button
      android:id="@+id/plus"
      style="@style/NumberPadButton"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/plus"
      android:text="@string/plus" />

  </TableRow>
</TableLayout>