<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableRow>
        <Button
          android:id="@+id/d100"
          android:text="@string/d100"
          android:contentDescription="@string/d100"
          style="@style/DiceButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <Button
          android:id="@+id/d20"
          android:text="@string/d20"
          android:contentDescription="@string/d20"
          style="@style/DiceButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

        <Button
          android:id="@+id/d12"
          android:text="@string/d12"
          android:contentDescription="@string/d12"
          style="@style/DiceButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

        <Button
          android:id="@+id/d10"
          android:text="@string/d10"
          android:contentDescription="@string/d10"
          style="@style/DiceButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </TableRow>
  <TableRow>

    <Button
      android:id="@+id/d8"
      android:text="@string/d8"
      android:contentDescription="@string/d8"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
    <Button
      android:id="@+id/d6"
      android:text="@string/d6"
      android:contentDescription="@string/d6"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <Button
      android:id="@+id/d4"
      android:text="@string/d4"
      android:contentDescription="@string/d4"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <Button
      android:id="@+id/dN"
      android:text="@string/dN"
      android:contentDescription="@string/dN"
      style="@style/DiceButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  </TableRow>
</TableLayout>