<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:id="@+id/clear"
            android:text="@string/clear"
            android:contentDescription="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/roll"
            android:text="@string/roll"
            android:contentDescription="@string/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/favorite"
            android:text="@string/favorite"
            android:contentDescription="@string/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>